--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,8 +1,22 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
+  <%= f.label :title %><br>
   <%= f.text_field :title %>
+  <br />
+
+  <%= f.label :artist_name %><br>
+  <%= f.text_field :artist_name %>
+  <br />
+
+  <label>Genre</label><br>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name  %>
+  <br />
+  <br>
+  <input name ="song[note_contents][]" id="song_notes_1"><br>
+  <input name ="song[note_contents][]" id="song_notes_2"><br>
+  <input name ="song[note_contents][]" id="song_notes_3"><br>
+  <input type="submit" value="Submit">
   <br />
 
   <%= f.submit %>
